k8s/airgap-wallet/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  creationTimestamp: null
  name: __CI_PROJECT_NAME__
  namespace: __NAMESPACE__
spec:
  rules:
  - host: __CI_PROJECT_NAME__.dev.gke.papers.tech
    http:
      paths:
      - backend:
          service:
            name: __CI_PROJECT_NAME__
            port:
              number: 80
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - __CI_PROJECT_NAME__.dev.gke.papers.tech
    secretName: __CI_PROJECT_NAME__-dev-tls
